Sun Jun 22 11:12:57 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (ruby_stack_check), vm_eval.c (stack_check): disable check if
	  hard stack check is available.

	* signal.c (Init_signal): use alternative stack for SEGV.

	* thread_{pthread,win32}.c (native_thread_init_stack): get stack
	  boundary.

	* thread_pthread.c (ruby_stack_overflow_p): check fault address is
	  stack overflow.

	* vm.c (vm_eval_body): if thrown exception is frozen, reraise it to
	  create a new instance.

Sat Jun 21 17:33:50 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_spawn): no longer support P_WAIT.

Sat Jun 21 16:46:09 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* thread_win32.c (native_sleep): must block reentrance when accessing
	  th->unblock.
	  fixed [ruby-core:17341], reported by Bill Kelly <billk at cts.com>

Sat Jun 21 16:29:02 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (call_args2, open_args): removed.

	* parse.y (parser_yylex): unified warnings at space between method
	  name and argument parenthese.  [ruby-dev:33943]

Sat Jun 21 16:21:07 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (flo_round): get rid of overflow.

Sat Jun 21 15:57:15 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/rdoc/parsers/parse_rb.rb (RDoc#collect_first_comment): skip
	  magic comment.

Sat Jun 21 15:54:55 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: check if fork works with pthread.

Sat Jun 21 15:31:09 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/make-snapshot: ported to ruby.

	* tool/make-snapshot: fixed digests.

Sat Jun 21 04:36:59 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/bigdecimal/lib/bigdecimal/jacobian.rb (Jacobian::dfdxi):
	  typo fixed (raize -> raise).  [ruby-list:45101]

	* enumerator.c (enum_each_cons): typo in RDoc fixed.

Sat Jun 21 00:45:34 2008  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* tool/make-snapshot: do not use sha256sum; use BASERUBY instead
